--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,24 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:id="@+id/toolbar"
+        app:title="방명록쓰기"
+        app:titleTextColor="#ffffff"
+        />
+
+    <!-- 이름-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginBottom="0px">
 
         <TextView
-            android:id="@+id/et_name"
+            android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="이름"
@@ -23,22 +34,25 @@
             />
 
         <EditText
-            android:id="@+id/type_name"
+            android:id="@+id/edtName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
             android:lines="1"
             />
     </LinearLayout>
+    <!--//이름영역-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0px"
+        android:orientation="horizontal"
         android:weightSum="9">
 
+
         <TextView
-            android:id="@+id/et_pwd"
+            android:id="@+id/tvPwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="패스워드"
@@ -48,7 +62,7 @@
             />
 
         <EditText
-            android:id="@+id/type_pwd"
+            android:id="@+id/edtPwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="8"
@@ -57,11 +71,29 @@
             />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_save"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200px"
+        android:orientation="vertical"
+        >
+
+        <EditText
+            android:id="@+id/edtContents"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30px"
+            android:orientation="vertical"
+            android:gravity="top"
+            android:lines="4"
+            android:hint="내용 작성해주세요"
+            />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnWrite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20px"
         android:text="저장"
     />
 
